--- a/style.css
+++ b/style.css
@@ -9,6 +9,15 @@ header{
     justify-content: space-between;
 }
 
+header img{
+    width: 10%;
+    height: 5%;
+}
+
+header img:hover{
+    width: 15%;
+}
+
 nav{
     height: 50px;
     display: flex;
@@ -19,25 +28,45 @@ nav{
     background: url("https://www.pngmart.com/files/4/Playstation-PNG-Pic.png");
 }
 
+nav a{
+    text-decoration: none;
+    color: black;
+}
+
+nav a:hover{
+    text-transform: uppercase;
+}
+
 main{
     display: flex;
-    width: 100%;
-    padding-left: 20px;
+    width: 98%;
+    margin: 0% 2% 0% 2%
 }
 
 section{
     width: 70%;
     height: auto;
+    padding: 1% 2% 1% 2%;
+    background: rgb(85, 96, 109);
+}
+
+section div{
+    margin-bottom: 5%;
 }
 
 aside{
     padding-left: 3%;
     width: 25%;
     height: auto;
+    background: url("imgs/fondoplay.jpg");
+}
+
+aside img{
+    width: 90%;
+    margin: 20% 0 25% 0;
 }
 
 footer{
-    
-    
-    
+    display: flex;
+    justify-content: center;
 }
